--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <p id="description">Thank you for taking your time to help us improve our platform</p>
             <form id="survey-form">
                 <fieldset id="personal-information">
-                    <label for="name-label">Name: </label>
-                        <input required id="name-label" type="text" placeholder="Enter your name" />
-                    <label for="email-label">Email: </label>
-                        <input required id="email-label" type="email"placeholder="Enter your email" />
-                    <label for="number-label">Age: (optional) </label>
-                        <input id="number-label" type="number" min="13" max="120" placeholder="Age" />
+                    <label for="name" id="name-label">Name: </label>
+                        <input required id="name" type="text" placeholder="Enter your name" />
+                    <label for="email" id="email-label">Email: </label>
+                        <input required id="email" type="email"placeholder="Enter your email" />
+                    <label for="number" id="number-label">Age: (optional) </label>
+                        <input id="number" type="number" min="13" max="120" placeholder="Age" />
                 </fieldset>  
 
                 <fieldset id="questions">
@@ -33,11 +33,11 @@
 
                         <label>Would you recommend freeCodeCamp to a friend?</label>
                             <label for="definitely"></label>
-                                <input class="inline" type="radio" id="definitely" name="recommendation"> Definitely
+                                <input class="inline" type="radio" id="definitely" name="recommendation" value="definitely"> Definitely
                             <label for="maybe"></label>
-                                <input class="inline" type="radio" id="maybe" name="recommendation"> Maybe
+                                <input class="inline" type="radio" id="maybe" name="recommendation" value="maybe"> Maybe
                             <label for="not-sure"></label>
-                                <input class="inline" type="radio" id="not-sure" name="recommendation"> Not sure
+                                <input class="inline" type="radio" id="not-sure" name="recommendation" value="not-sure"> Not sure
 
                         <label for="feature">What is your favorite feature of freeCodeCamp?</label>
                             <select  id="feature">
@@ -49,22 +49,22 @@
                             </select>
 
                         <label>What would you like to see improved? (Check all that apply)</label>
-                            <input type="checkbox" id="0"> Front-end Projects<br>
-                            <input type="checkbox" id="1"> Back-end Projects<br>
-                            <input type="checkbox" id="2"> Data Visualization<br>
-                            <input type="checkbox" id="3"> Challenges<br>
-                            <input type="checkbox" id="4"> Open Source Community<br>
-                            <input type="checkbox" id="5"> Gitter help rooms<br>
-                            <input type="checkbox" id="6"> Videos<br>
-                            <input type="checkbox" id="7"> City Meetups<br>
-                            <input type="checkbox" id="8"> Wiki<br>
-                            <input type="checkbox" id="9"> Forum<br>
-                            <input type="checkbox" id="10"> Additional Courses<br>
+                            <input type="checkbox" id="0" value="0"> Front-end Projects<br>
+                            <input type="checkbox" id="1" value="1"> Back-end Projects<br>
+                            <input type="checkbox" id="2" value="2"> Data Visualization<br>
+                            <input type="checkbox" id="3" value="3"> Challenges<br>
+                            <input type="checkbox" id="4" value="4"> Open Source Community<br>
+                            <input type="checkbox" id="5" value="5"> Gitter help rooms<br>
+                            <input type="checkbox" id="6" value="6"> Videos<br>
+                            <input type="checkbox" id="7" value="7"> City Meetups<br>
+                            <input type="checkbox" id="8" value="8"> Wiki<br>
+                            <input type="checkbox" id="9" value="9"> Forum<br>
+                            <input type="checkbox" id="10" value="10"> Additional Courses<br>
 
                         <label for="comments">Any comments or suggestions?</label>
                         <textarea id="comments" name="comments" rows="3" cols="71" placeholder="Enter your comment here..."></textarea>
                 </fieldset>
-                <input type="submit" value="Submit" />
+                <input id="submit" type="submit" value="Submit" />
             </form>
     </body>
     <footer>
